<resources>
    <string name="app_name">RainWeatherApp</string>
    <string name="settings">Settings</string>
    <string name="today">Today</string>
    <string name="location_permission_dialog_title">Location Permssion</string>
    <string name="location_permission_prompt">You need to grant location permission in order to get weather updates</string>
    <string name="icon">weather_icon</string>
    <string name="retry">Retry</string>
    <string name="loading_weather">Loading weather</string>
    <string name="precipitation">Precipitation</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet">Check your internet connection</string>
    <string name="set_custom_location">You can set custom location in App Settings</string>
    <string name="location_not_available">Device location not available</string>
    <string name="gps_enable_prompt">You need to enable GPS in order to get weather updates</string>
    <string name="condition_text">condition_text</string>
    <string name="no_data">No data</string>
    <string name="forecast">Forecast:</string>
    <string name="data_fetch_failed">Data fetch failed.\nPlease check your internet connection and try again.\n\nSwipe down to retry 🙂</string>
    <string name="about">About</string>
    <string name="version">Version 1.0</string>
    <string name="myweather">RainWeatherApp</string>
    <string name="tempC">\u2103</string>
    <string name="enable_gps">Enable GPS</string>
</resources>
