<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.rain.weather.utils.Status" />

        <variable
            name="resource"
            type="com.rain.weather.utils.Resource" />

        <variable
            name="signal"
            type="com.rain.weather.data.model.Signal" />

        <variable
            name="location"
            type="com.rain.weather.data.model.WLocation" />

        <variable
            name="weather"
            type="com.rain.weather.data.model.Current" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue_bg"
            android:fitsSystemWindows="true">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/loading_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/loading_weather"
                android:textSize="@dimen/text_16"
                app:layout_constraintEnd_toEndOf="@+id/progressBar"
                app:layout_constraintStart_toStartOf="@+id/progressBar"
                app:layout_constraintTop_toBottomOf="@+id/progressBar" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/loading_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="progressBar,loading_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleGone="@{resource.status == Status.LOADING}" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_8"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleGone="@{resource.data != null}">

                <com.github.pwittchen.weathericonview.WeatherIconView
                    android:id="@+id/weather_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showIcon="@{weather.currentWeatherIcon}"
                    app:weatherIconColor="@color/colorPrimary"
                    app:weatherIconSize="200" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:text="@{String.valueOf(weather.temperature).concat(@string/tempC)}"
                    android:textSize="@dimen/text_60"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weather_icon"
                    tools:text="12\u2103" />

                <TextView
                    android:id="@+id/condition_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_32"
                    android:maxEms="6"
                    android:text="@{weather.weatherDescription}"
                    android:textSize="@dimen/text_25"
                    app:layout_constraintStart_toStartOf="@+id/temperature"
                    app:layout_constraintTop_toBottomOf="@+id/temperature"
                    tools:text="Cloudy" />

                <TextView
                    android:id="@+id/signal_strenght"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="112dp"
                    android:layout_marginTop="40dp"
                    android:maxEms="6"
                    android:text="@{signal.strength}"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintRight_toLeftOf="@+id/condition_text"
                    app:layout_constraintStart_toStartOf="@+id/condition_text"
                    app:layout_constraintTop_toBottomOf="@+id/temperature"
                    tools:text="Signal Strength" />

                <TextView
                    android:id="@+id/day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:ellipsize="end"
                    android:text="@{location.dayOfWeek}"
                    android:textSize="@dimen/text_35"
                    app:layout_constraintBaseline_toBaselineOf="@+id/temperature"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Thursday" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/guideline_margin" />

            <TextView
                android:id="@+id/precipitation_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(weather.precip) +`mm`}"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toStartOf="@+id/visibility_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/wind_text"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/precipitation_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/precipitation"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="@+id/precipitation_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/precipitation_text"
                app:layout_constraintTop_toBottomOf="@+id/precipitation_text" />

            <TextView
                android:id="@+id/visibility_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_8"
                android:text="@{String.valueOf(weather.visibility) +`km`}"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/precipitation_text"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <TextView
                android:id="@+id/visibility_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/visibility"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="@+id/visibility_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/precipitation_label"
                app:layout_constraintStart_toStartOf="@+id/visibility_text"
                app:layout_constraintTop_toBottomOf="@+id/visibility_text" />

            <TextView
                android:id="@+id/wind_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:text="@string/wind"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toEndOf="@+id/wind_text"
                app:layout_constraintStart_toStartOf="@+id/wind_text"
                app:layout_constraintTop_toBottomOf="@+id/wind_text" />

            <TextView
                android:id="@+id/wind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(weather.windSpeed) +`kph`}"
                android:textSize="@dimen/text_18"
                app:layout_constraintEnd_toStartOf="@+id/precipitation_text"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/label_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="wind_label, precipitation_label,visibility_label,wind_text,visibility_text,precipitation_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:visibleGone="@{resource.data != null}" />

            <TextView
                android:id="@+id/no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_8"
                android:text="@string/data_fetch_failed"
                android:textSize="@dimen/text_16"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                app:visibleGone="@{resource.data == null}" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>